---
source: compiler-core/src/fsharp/tests/numbers.rs
assertion_line: 69
expression: "\npub fn main() {\n  let a = 3\n  let b = -a\n  let c = -8\n}\n"
---
module rec my.``mod``
let main(): int = begin
    let a = 3
    let b = -a
    let c = -8
    c
end
